<resources>
    <string name="app_name">Inventory App</string>
    <string name="sale_button">Sale</string>
    <string name="new_item">Add new Item</string>
    <string name="hint_email_address">supplier@gmail.com</string>
    <string name="supplier_email_title">Supplier E-mail Address</string>
    <string name="supplier_phone_hint">e.g. +49 000-000-000</string>
    <string name="supplier_phone_title">Supplier Phone</string>
    <string name="supplier_name_hint">Smartphone Supplier</string>
    <string name="supplier_name_title">Supplier Name</string>
    <string name="quantity_title">Quantity</string>
    <string name="price_title">Price</string>
    <string name="product_name_title">Product Name</string>
    <string name="currency_detail">$ / item</string>
    <string name="action_save">Save Item</string>
    <string name="editor_activity_add_item">Add new Item</string>
    <string name="editor_activity_edit_item">Edit Item</string>
    <string name="menu_order_item">Order More</string>
    <string name="menu_delete_item">Delete Item</string>
    <string name="menu_delete_all_item">Delete all Item</string>
    <string name="phone">Phone</string>
    <string name="email">E-mail</string>
    <string name="order_message">You can place an order for this item by phone or e-mail</string>
    <string name="delete_message">Are you sure want to proceed with the deletion?</string>
    <string name="delete">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="empty_list_hint">It`s a bit lonely here...</string>
    <string name="empty_list_hint2">Get started by adding some new item</string>
    <string name="add_dummy_data">Add Dummy Data</string>
    <string name="choose_pics">Choose Picture</string>
    <string name="image">Image</string>
    <string name="unsaved_changes_dialog_msg">There are unsaved changes in the product information. Do you want to continue?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="product_name">Iphone 11</string>
    <string name="product_price">₹0.00</string>
    <string name="product_quantity">0</string>
    <string name="available_stock">Available Stock</string>
</resources>